[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Samuel/mob_pool.gd" type="Script" id=1]
[ext_resource path="res://scenes/Components/Mob.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.118275, 0.189159, 0, 0, 0, 0, 1024, 0.0129895, 0, 0, 0, 0, 1023.97, 600.014, 0, 0, 0, 0, -0.0419407, 600.04, 0, 0, 0, 0, 0.118275, 0.189159 )
}

[node name="Mob_Pool" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="NewWave" type="Timer" parent="."]
autostart = true

[node name="WavePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="WaveSpawn" type="PathFollow2D" parent="WavePath"]
position = Vector2( 0.118275, 0.189159 )
rotation = -0.000172073
[connection signal="checkColor" from="." to="." method="_on_Mob_Pool_checkColor"]
[connection signal="timeout" from="NewWave" to="." method="_on_NewWave_timeout"]
